# ormantism

./: .gitignore  .pylintrc  README.md  TODO.md  pyproject.toml
.github/workflows/: workflow.yml
.prompts/documentation/: generate-classes-reference.md  generate-docstrings.md  generate-methods-reference.md  generate-readme.md
.prompts/pylint/: improve.md
.prompts/testing/: create-from-main.md  fix.md  increase-coverage.md
crudantic/: base.py  requirements.txt
ormantism/: REFERENCE.md  __init__.py  base.py  column.py  connection.py  database.py  expressions.py  field.py  join_info.py  query.py  table.py  table.py,cover  table_meta.py  table_mixins.py  transaction.py
ormantism/dialects/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py  sqlserver.py
ormantism/expressions/: __init__.py  _bases.py  column.py  function.py  join_paths.py  like.py  nary_operator.py  order.py  table.py  unary_operator.py
ormantism/table/: __init__.py  base.py  hydratable.py  meta.py  mixins.py  schema.py
ormantism/utils/: README.md  __init__.py  find_subclass.py  get_base_type.py  get_table_by_name.py  is_table.py  is_type_annotation.py  make_hashable.py  rebuild_pydantic_model.py  resolve_type.py  schema.py  serialize.py  supermodel.py
tests/: README.md  conftest.py  helpers.py  test_connection.py  test_expressions.py  test_field.py  test_join_info.py  test_query.py  test_query_join.py  test_rebuild_pydantic_model.py  test_supermodel.py  test_table.py  test_transaction.py  test_utils.py
tests/column/: test_field_parse.py  test_field_reference_and_from_pydantic.py  (+4 more)
(+34 files in other folders)
