[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ormantism"
version = "0.7.0"
description = "A lightweight ORM built on Pydantic for simple CRUD operations with minimal code"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Mathieu Rodic"},
]
keywords = ["orm", "pydantic", "sqlite", "SQLite", "MySQL", "PostgreSQL"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "datamodel_code_generator>=0.31.2",
]

[project.optional-dependencies]
mysql = ["pymysql"]
postgresql = ["psycopg2"]

[project.urls]
Homepage = "https://github.com/mathieurodic/ormantism"
